--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -1,6 +1,53 @@
 {
+  "home": "Home",
   "login": "Login",
+  "or": "or",
   "signup": "Sign up",
+  "CommonlyUsedEmails": "Commonly used emails",
+  "password": "Password",
+  "rememberMe": "Remember me",
+  "forgetPassword": "forget the password",
   "download": "Download App",
-  "search topic":"Search for what topic"
+  "search topic": "Search for what topic",
+  "hot": "Hot board",
+  "all": "All boards",
+  "creatorRanking": "Creator Ranking",
+  "stock": "Stock board",
+  "mood": "Mood board",
+  "beauty": "Beauty board",
+  "exam": "Exam board",
+  "animation": "Animation board",
+  "music": "Music board",
+  "drama": "Drama board",
+  "variety": "Variety board",
+  "idol": "Idol board",
+  "pet": "Pet board",
+  "gourmet": "Gourmet board",
+  "travel": "Travel board",
+  "outfit": "Outfit board",
+  "sports": "Sports board",
+  "work": "Work board",
+  "collect": "Collect",
+  "anna": "Anna",
+  "ming": "Ming",
+  "lily": "Lily",
+  "david": "David",
+  "alice": "Alice",
+  "george": "George",
+  "emily": "Emily",
+  "tom": "Tom",
+  "sarah": "Sarah",
+  "jack": "Jack",
+  "alex": "Alex",
+  "joe": "Joe",
+  "sasha": "Sasha",
+  "chris": "Chris",
+  "susan": "Susan",
+  "bell": "Bell",
+  "coco": "Coco",
+  "simon": "Simon",
+  "james": "James",
+  "peter": "Peter",
+  "footer line 1": "Join discussions on trendy topics exclusively for young people like you who are going to college or entering the workforce!",
+  "footer line 2": "Complete identity verification to post, comment, and draw cards to meet new friends"
 }
