--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -1,6 +1,53 @@
 {
+  "home": "首頁",
   "login": "登入",
+  "or": "或",
   "signup": "註冊",
+  "CommonlyUsedEmails": "常用信箱",
+  "password": "密碼",
+  "rememberMe": "記得我",
+  "forgetPassword": "忘記密碼",
   "download": "下載App",
-  "search topic": "搜什麼主題?"
+  "search topic": "搜什麼主題?",
+  "hot": "即時熱門看板",
+  "all": "所有看板",
+  "creatorRanking": "創作者排行榜",
+  "stock": "股票板",
+  "mood": "心情板",
+  "beauty": "美妝板",
+  "exam": "考試板",
+  "animation": "動漫板",
+  "music": "音樂板",
+  "drama": "戲劇板",
+  "variety": "綜藝板",
+  "idol": "偶像板",
+  "pet": "寵物板",
+  "gourmet": "美食板",
+  "travel": "旅遊板",
+  "outfit": "穿搭板",
+  "sports": "體育板",
+  "work": "打工板",
+  "collect": "收藏",
+  "anna": "安娜",
+  "ming": "小明",
+  "lily": "莉莉",
+  "david": "大衛",
+  "alice": "艾莉絲",
+  "george": "喬治",
+  "emily": "艾米莉",
+  "tom": "湯姆",
+  "sarah": "莎拉",
+  "jack": "杰克",
+  "alex": "愛莉克絲",
+  "joe": "喬",
+  "sasha": "莎夏",
+  "chris": "克里斯",
+  "susan": "蘇珊",
+  "bell": "貝爾",
+  "coco": "可可",
+  "simon": "賽門",
+  "james": "詹姆士",
+  "peter": "彼得",
+  "footer line 1": "上大學、出社會的你，快加入討論專屬年輕人的流行話題！",
+  "footer line 2": "完成身份驗證即可發文、留言與抽卡認識新朋友"
 }
