--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -9,6 +9,7 @@
   "forgetPassword": "忘記密碼",
   "download": "下載App",
   "search topic": "搜什麼主題?",
+  "follow": "追蹤",
   "hot": "即時熱門看板",
   "all": "所有看板",
   "creatorRanking": "創作者排行榜",
