--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -9,6 +9,7 @@
   "forgetPassword": "forget the password",
   "download": "Download App",
   "search topic": "Search for what topic",
+  "follow":"Follow",
   "hot": "Hot board",
   "all": "All boards",
   "creatorRanking": "Creator Ranking",
