--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -9,7 +9,7 @@
   "forgetPassword": "forget the password",
   "download": "Download App",
   "search topic": "Search for what topic",
-  "follow":"Follow",
+  "follow": "Follow",
   "hot": "Hot board",
   "all": "All boards",
   "creatorRanking": "Creator Ranking",
@@ -29,6 +29,7 @@
   "sports": "Sports board",
   "work": "Work board",
   "collect": "Collect",
+  "clickMe": "click me",
   "anna": "Anna",
   "ming": "Ming",
   "lily": "Lily",
