--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -3,6 +3,7 @@
   "login": "Login",
   "or": "or",
   "signup": "Sign up",
+  "addNewPost":"Add New Post",
   "CommonlyUsedEmails": "Commonly used emails",
   "password": "Password",
   "rememberMe": "Remember me",
