--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -3,6 +3,7 @@
   "login": "登入",
   "or": "或",
   "signup": "註冊",
+  "addNewPost": "新增貼文",
   "CommonlyUsedEmails": "常用信箱",
   "password": "密碼",
   "rememberMe": "記得我",
@@ -29,7 +30,7 @@
   "sports": "體育板",
   "work": "打工板",
   "collect": "收藏",
-  "clickMe":"點我",
+  "clickMe": "點我",
   "anna": "安娜",
   "ming": "小明",
   "lily": "莉莉",
