--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -3,7 +3,9 @@
   "login": "Login",
   "or": "or",
   "signup": "Sign up",
-  "addNewPost":"Add New Post",
+  "addNewPost": "Add New Post",
+  "delete": "Delete",
+  "edit": "edit",
   "CommonlyUsedEmails": "Commonly used emails",
   "password": "Password",
   "rememberMe": "Remember me",
