--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -4,6 +4,8 @@
   "or": "或",
   "signup": "註冊",
   "addNewPost": "新增貼文",
+  "delete": "刪除",
+  "edit": "編輯",
   "CommonlyUsedEmails": "常用信箱",
   "password": "密碼",
   "rememberMe": "記得我",
