--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -11,6 +11,8 @@
   "rememberMe": "記得我",
   "forgetPassword": "忘記密碼",
   "download": "下載App",
+  "topics": "選擇主題",
+  "topic": "主題",
   "search topic": "搜什麼主題?",
   "follow": "追蹤",
   "hot": "即時熱門看板",
@@ -54,5 +56,14 @@
   "james": "詹姆士",
   "peter": "彼得",
   "footer line 1": "上大學、出社會的你，快加入討論專屬年輕人的流行話題！",
-  "footer line 2": "完成身份驗證即可發文、留言與抽卡認識新朋友"
+  "footer line 2": "完成身份驗證即可發文、留言與抽卡認識新朋友",
+  "enter a title": "請輸入標題",
+  "title": "標題",
+  "describe": "請用一句話說明你的文章",
+  "overview": "文章概要",
+  "upload": "上傳圖片",
+  "submit": "提交",
+  "reset": "重置",
+  "enter the content": "請輸入內容",
+  "content": "內容"
 }
