--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -65,5 +65,6 @@
   "submit": "Submit",
   "reset": "Reset",
   "enter the content": "Please enter the content",
-  "content":"Content"
+  "content":"Content",
+  "NoPostsFound":"No Posts Found!"
 }
