--- a/src/i18n/locales/zh-TW.json
+++ b/src/i18n/locales/zh-TW.json
@@ -65,5 +65,6 @@
   "submit": "提交",
   "reset": "重置",
   "enter the content": "請輸入內容",
-  "content": "內容"
+  "content": "內容",
+  "NoPostsFound": "沒有找到文章！"
 }
