--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -34,6 +34,9 @@
   "sports": "Sports board",
   "work": "Work board",
   "collect": "Collect",
+  "collection": "My Collection",
+  "Following Topics": "Following Topics",
+  "myArticle": "My Article",
   "clickMe": "click me",
   "anna": "Anna",
   "ming": "Ming",
